// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mixins background 1`] = `
Object {
  "backgroundColor": "var(--palette-brand-bg-base)",
}
`;

exports[`Mixins background 2`] = `
Object {
  "backgroundColor": "var(--palette-primary-bg-base)",
}
`;

exports[`Mixins background 3`] = `
Object {
  "backgroundColor": "var(--palette-secondary-bg-base)",
}
`;

exports[`Mixins background 4`] = `
Object {
  "backgroundColor": "var(--palette-tertiary-bg-base)",
}
`;

exports[`Mixins background 5`] = `
Object {
  "backgroundColor": "var(--palette-neutral-bg-base)",
}
`;

exports[`Mixins background 6`] = `
Object {
  "backgroundColor": "var(--palette-muted-bg-base)",
}
`;

exports[`Mixins background 7`] = `
Object {
  "backgroundColor": "var(--palette-danger-bg-base)",
}
`;

exports[`Mixins background 8`] = `
Object {
  "backgroundColor": "var(--palette-warning-bg-base)",
}
`;

exports[`Mixins background 9`] = `
Object {
  "backgroundColor": "var(--palette-failure-bg-base)",
}
`;

exports[`Mixins background 10`] = `
Object {
  "backgroundColor": "var(--palette-success-bg-base)",
}
`;

exports[`Mixins background 11`] = `
Object {
  "backgroundColor": "var(--palette-info-bg-base)",
}
`;

exports[`Mixins border 1`] = `
Object {
  "borderColor": "var(--palette-neutral-color-40)",
  "borderRadius": "var(--border-sm-radius)",
  "borderStyle": "solid",
  "borderWidth": "var(--border-sm-width)",
}
`;

exports[`Mixins border 2`] = `
Object {
  "borderColor": "var(--palette-neutral-color-40)",
  "borderRadius": "var(--border-df-radius)",
  "borderStyle": "solid",
  "borderWidth": "var(--border-df-width)",
}
`;

exports[`Mixins border 3`] = `
Object {
  "borderColor": "var(--palette-neutral-color-40)",
  "borderRadius": "var(--border-lg-radius)",
  "borderStyle": "solid",
  "borderWidth": "var(--border-lg-width)",
}
`;

exports[`Mixins box 1`] = `
Object {
  "backgroundColor": "var(--palette-neutral-bg-base)",
  "borderColor": "var(--palette-neutral-color-40)",
  "borderRadius": "var(--border-sm-radius)",
  "borderStyle": "solid",
  "borderWidth": "var(--border-sm-width)",
}
`;

exports[`Mixins box 2`] = `
Object {
  "backgroundColor": "var(--palette-neutral-bg-base)",
  "borderColor": "var(--palette-neutral-color-40)",
  "borderRadius": "var(--border-df-radius)",
  "borderStyle": "solid",
  "borderWidth": "var(--border-df-width)",
}
`;

exports[`Mixins box 3`] = `
Object {
  "backgroundColor": "var(--palette-neutral-bg-base)",
  "borderColor": "var(--palette-neutral-color-40)",
  "borderRadius": "var(--border-lg-radius)",
  "borderStyle": "solid",
  "borderWidth": "var(--border-lg-width)",
}
`;

exports[`Mixins foreground 1`] = `
Object {
  "color": "var(--palette-brand-fg-base)",
}
`;

exports[`Mixins foreground 2`] = `
Object {
  "color": "var(--palette-primary-fg-base)",
}
`;

exports[`Mixins foreground 3`] = `
Object {
  "color": "var(--palette-secondary-fg-base)",
}
`;

exports[`Mixins foreground 4`] = `
Object {
  "color": "var(--palette-tertiary-fg-base)",
}
`;

exports[`Mixins foreground 5`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
}
`;

exports[`Mixins foreground 6`] = `
Object {
  "color": "var(--palette-muted-fg-base)",
}
`;

exports[`Mixins foreground 7`] = `
Object {
  "color": "var(--palette-danger-fg-base)",
}
`;

exports[`Mixins foreground 8`] = `
Object {
  "color": "var(--palette-warning-fg-base)",
}
`;

exports[`Mixins foreground 9`] = `
Object {
  "color": "var(--palette-failure-fg-base)",
}
`;

exports[`Mixins foreground 10`] = `
Object {
  "color": "var(--palette-success-fg-base)",
}
`;

exports[`Mixins foreground 11`] = `
Object {
  "color": "var(--palette-info-fg-base)",
}
`;

exports[`Mixins heading 1`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-heading)",
  "fontSize": "var(--heading-l1-size)",
  "fontWeight": "normal",
  "letterSpacing": "var(--heading-l1-letter-spacing)",
  "lineHeight": "var(--heading-l1-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Mixins heading 2`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-heading)",
  "fontSize": "var(--heading-l2-size)",
  "fontWeight": "normal",
  "letterSpacing": "var(--heading-l2-letter-spacing)",
  "lineHeight": "var(--heading-l2-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Mixins heading 3`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-heading)",
  "fontSize": "var(--heading-l3-size)",
  "fontWeight": "normal",
  "letterSpacing": "var(--heading-l3-letter-spacing)",
  "lineHeight": "var(--heading-l3-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Mixins heading 4`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-heading)",
  "fontSize": "var(--heading-l4-size)",
  "fontWeight": "normal",
  "letterSpacing": "var(--heading-l4-letter-spacing)",
  "lineHeight": "var(--heading-l4-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Mixins heading 5`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-heading)",
  "fontSize": "var(--heading-l5-size)",
  "fontWeight": "normal",
  "letterSpacing": "var(--heading-l5-letter-spacing)",
  "lineHeight": "var(--heading-l5-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Mixins heading 6`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-heading)",
  "fontSize": "var(--heading-l6-size)",
  "fontWeight": "normal",
  "letterSpacing": "var(--heading-l6-letter-spacing)",
  "lineHeight": "var(--heading-l6-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Mixins pattern 1`] = `
Object {
  "display": "none",
}
`;

exports[`Mixins pattern 2`] = `
Object {
  "clipPath": "rect(1px, 1px, 1px, 1px)",
  "height": 1,
  "left": "-5vw",
  "overflow": "hidden",
  "position": "fixed",
  "width": 1,
}
`;

exports[`Mixins pattern 3`] = `
Object {
  ":not(:focus):not(:active)": Object {
    "border": 0,
    "clip": "rect(0, 0, 0, 0)",
    "clipPath": "inset(50%)",
    "height": 1,
    "margin": 0,
    "overflow": "hidden",
    "padding": 0,
    "position": "absolute",
    "whiteSpace": "nowrap",
    "width": 1,
  },
}
`;

exports[`Mixins pattern 4`] = `
Object {
  "appearance": "none",
  "backgroundColor": "transparent",
  "border": 0,
  "cursor": "pointer",
  "display": "inline-block",
  "fontSize": "inherit",
  "margin": 0,
  "padding": 0,
  "textDecoration": "none",
  "userSelect": "auto",
  "verticalAlign": "middle",
}
`;

exports[`Mixins pattern 5`] = `
Object {
  "::-moz-focus-outer": Object {
    "border": 0,
  },
  "appearance": "none",
  "backgroundColor": "transparent",
  "margin": 0,
  "padding": 0,
  "width": "100%",
}
`;

exports[`Mixins pattern 6`] = `
Object {
  "listStyle": "none",
  "margin": 0,
  "padding": 0,
}
`;

exports[`Mixins pattern 7`] = `
Object {
  "display": "block",
  "verticalAlign": "middle",
}
`;

exports[`Mixins pattern 8`] = `
Object {
  "fontFamily": "inherit",
  "fontSize": "inherit",
  "fontWeight": "normal",
  "wordWrap": "break-word",
}
`;

exports[`Mixins pattern 9`] = `
Object {
  "-moz-osx-font-smoothing": "grayscale",
  "-webkit-font-smoothing": "antialiased",
  "@media screen and (min-width: 114.29em) and (max-width: 137.07em)": Object {
    "fontSize": "var(--breakpoint-lg-root-text-size)",
    "lineHeight": "var(--breakpoint-lg-root-line-height)",
  },
  "@media screen and (min-width: 137.14em)": Object {
    "fontSize": "var(--breakpoint-xl-root-text-size)",
    "lineHeight": "var(--breakpoint-xl-root-line-height)",
  },
  "@media screen and (min-width: 45.71em) and (max-width: 68.50em)": Object {
    "fontSize": "var(--breakpoint-xs-root-text-size)",
    "lineHeight": "var(--breakpoint-xs-root-line-height)",
  },
  "@media screen and (min-width: 68.57em) and (max-width: 91.36em)": Object {
    "fontSize": "var(--breakpoint-sm-root-text-size)",
    "lineHeight": "var(--breakpoint-sm-root-line-height)",
  },
  "@media screen and (min-width: 91.43em) and (max-width: 114.21em)": Object {
    "fontSize": "var(--breakpoint-md-root-text-size)",
    "lineHeight": "var(--breakpoint-md-root-line-height)",
  },
  "backgroundColor": "var(--palette-neutral-bg-base)",
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-text)",
  "fontSize": "var(--typography-root-text-size)",
  "lineHeight": "var(--typography-root-line-height)",
  "margin": 0,
  "padding": 0,
  "textRendering": "optimizeLegibility",
  "textSizeAdjust": "100%",
}
`;

exports[`Mixins pattern 10`] = `
Object {
  "overflowWrap": "break-word",
  "wordBreak": "break-word",
  "wordWrap": "break-word",
}
`;

exports[`Mixins pattern 11`] = `
Object {
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
}
`;

exports[`Mixins pattern 12`] = `
Object {
  "overflowWrap": "normal",
  "wordBreak": "normal",
  "wordWrap": "normal",
}
`;

exports[`Mixins shadow 1`] = `
Object {
  "boxShadow": "var(--shadow-xs-x) var(--shadow-xs-y) var(--shadow-xs-blur) var(--shadow-xs-spread) var(--palette-neutral-color-90)",
}
`;

exports[`Mixins shadow 2`] = `
Object {
  "boxShadow": "var(--shadow-sm-x) var(--shadow-sm-y) var(--shadow-sm-blur) var(--shadow-sm-spread) var(--palette-neutral-color-90)",
}
`;

exports[`Mixins shadow 3`] = `
Object {
  "boxShadow": "var(--shadow-md-x) var(--shadow-md-y) var(--shadow-md-blur) var(--shadow-md-spread) var(--palette-neutral-color-90)",
}
`;

exports[`Mixins shadow 4`] = `
Object {
  "boxShadow": "var(--shadow-lg-x) var(--shadow-lg-y) var(--shadow-lg-blur) var(--shadow-lg-spread) var(--palette-neutral-color-90)",
}
`;

exports[`Mixins shadow 5`] = `
Object {
  "boxShadow": "var(--shadow-xl-x) var(--shadow-xl-y) var(--shadow-xl-blur) var(--shadow-xl-spread) var(--palette-neutral-color-90)",
}
`;

exports[`Mixins text 1`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-text)",
  "fontSize": "var(--text-sm-size)",
  "fontWeight": "normal",
  "lineHeight": "var(--text-sm-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Mixins text 2`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-text)",
  "fontSize": "var(--text-df-size)",
  "fontWeight": "normal",
  "lineHeight": "var(--text-df-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Mixins text 3`] = `
Object {
  "color": "var(--palette-neutral-fg-base)",
  "fontFamily": "var(--typography-font-text)",
  "fontSize": "var(--text-lg-size)",
  "fontWeight": "normal",
  "lineHeight": "var(--text-lg-line-height)",
  "wordWrap": "break-word",
}
`;

exports[`Mixins ui button 1`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-brand-color-50)",
    "borderColor": "var(--palette-brand-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-brand-color-20)",
    "borderColor": "var(--palette-brand-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-brand-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-brand-color-60)",
    "borderColor": "var(--palette-brand-color-70)",
  },
  "backgroundColor": "var(--palette-brand-color-40)",
  "borderColor": "var(--palette-brand-color-50)",
  "color": "var(--palette-brand-color-00)",
}
`;

exports[`Mixins ui button 2`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-primary-color-50)",
    "borderColor": "var(--palette-primary-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-primary-color-20)",
    "borderColor": "var(--palette-primary-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-primary-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-primary-color-60)",
    "borderColor": "var(--palette-primary-color-70)",
  },
  "backgroundColor": "var(--palette-primary-color-40)",
  "borderColor": "var(--palette-primary-color-50)",
  "color": "var(--palette-primary-color-00)",
}
`;

exports[`Mixins ui button 3`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-secondary-color-50)",
    "borderColor": "var(--palette-secondary-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-secondary-color-20)",
    "borderColor": "var(--palette-secondary-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-secondary-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-secondary-color-60)",
    "borderColor": "var(--palette-secondary-color-70)",
  },
  "backgroundColor": "var(--palette-secondary-color-40)",
  "borderColor": "var(--palette-secondary-color-50)",
  "color": "var(--palette-secondary-color-00)",
}
`;

exports[`Mixins ui button 4`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-tertiary-color-50)",
    "borderColor": "var(--palette-tertiary-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-tertiary-color-20)",
    "borderColor": "var(--palette-tertiary-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-tertiary-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-tertiary-color-60)",
    "borderColor": "var(--palette-tertiary-color-70)",
  },
  "backgroundColor": "var(--palette-tertiary-color-40)",
  "borderColor": "var(--palette-tertiary-color-50)",
  "color": "var(--palette-tertiary-color-00)",
}
`;

exports[`Mixins ui button 5`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-neutral-color-50)",
    "borderColor": "var(--palette-neutral-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-neutral-color-20)",
    "borderColor": "var(--palette-neutral-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-neutral-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-neutral-color-60)",
    "borderColor": "var(--palette-neutral-color-70)",
  },
  "backgroundColor": "var(--palette-neutral-color-40)",
  "borderColor": "var(--palette-neutral-color-50)",
  "color": "var(--palette-neutral-color-00)",
}
`;

exports[`Mixins ui button 6`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-muted-color-50)",
    "borderColor": "var(--palette-muted-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-muted-color-20)",
    "borderColor": "var(--palette-muted-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-muted-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-muted-color-60)",
    "borderColor": "var(--palette-muted-color-70)",
  },
  "backgroundColor": "var(--palette-muted-color-40)",
  "borderColor": "var(--palette-muted-color-50)",
  "color": "var(--palette-muted-color-00)",
}
`;

exports[`Mixins ui button 7`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-danger-color-50)",
    "borderColor": "var(--palette-danger-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-danger-color-20)",
    "borderColor": "var(--palette-danger-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-danger-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-danger-color-60)",
    "borderColor": "var(--palette-danger-color-70)",
  },
  "backgroundColor": "var(--palette-danger-color-40)",
  "borderColor": "var(--palette-danger-color-50)",
  "color": "var(--palette-danger-color-00)",
}
`;

exports[`Mixins ui button 8`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-warning-color-50)",
    "borderColor": "var(--palette-warning-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-warning-color-20)",
    "borderColor": "var(--palette-warning-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-warning-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-warning-color-60)",
    "borderColor": "var(--palette-warning-color-70)",
  },
  "backgroundColor": "var(--palette-warning-color-40)",
  "borderColor": "var(--palette-warning-color-50)",
  "color": "var(--palette-warning-color-00)",
}
`;

exports[`Mixins ui button 9`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-failure-color-50)",
    "borderColor": "var(--palette-failure-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-failure-color-20)",
    "borderColor": "var(--palette-failure-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-failure-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-failure-color-60)",
    "borderColor": "var(--palette-failure-color-70)",
  },
  "backgroundColor": "var(--palette-failure-color-40)",
  "borderColor": "var(--palette-failure-color-50)",
  "color": "var(--palette-failure-color-00)",
}
`;

exports[`Mixins ui button 10`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-success-color-50)",
    "borderColor": "var(--palette-success-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-success-color-20)",
    "borderColor": "var(--palette-success-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-success-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-success-color-60)",
    "borderColor": "var(--palette-success-color-70)",
  },
  "backgroundColor": "var(--palette-success-color-40)",
  "borderColor": "var(--palette-success-color-50)",
  "color": "var(--palette-success-color-00)",
}
`;

exports[`Mixins ui button 11`] = `
Object {
  ":active": Object {
    "backgroundColor": "var(--palette-info-color-50)",
    "borderColor": "var(--palette-info-color-60)",
  },
  ":disabled": Object {
    "backgroundColor": "var(--palette-info-color-20)",
    "borderColor": "var(--palette-info-color-30)",
  },
  ":focus": Object {
    "borderColor": "var(--palette-info-color-60)",
  },
  ":hover": Object {
    "backgroundColor": "var(--palette-info-color-60)",
    "borderColor": "var(--palette-info-color-70)",
  },
  "backgroundColor": "var(--palette-info-color-40)",
  "borderColor": "var(--palette-info-color-50)",
  "color": "var(--palette-info-color-00)",
}
`;
